# JsonX

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: toolchain-arm-gcc-win.cmake
docs/: DESIGN.md  DYNAMIC_JSON.md  RELEASE_CHECKLIST.md
examples/: example.c
inc/: jx_api.h  jx_config.h  jx_debug.h  jx_internal.h  jx_static_allocator.h  jx_types.h  jx_user.h  jx_version.h
private/: jx_backend.h  jx_debug.h  jx_internal.h  jx_static_allocator.h
src/: example.c  jx_native_backend.c  jx_parser.c  jx_static_allocator.c  jx_version.c
tests/: basic_mapping_test.c
